Fixing a misalignment issue in width of 1440px

--- a/pages/index.module.scss
+++ b/pages/index.module.scss
@@ -1,5 +1,5 @@
 /* ===== mobile: Screen Width < 1440px ===== */
-@media screen and (max-width: 1440px) {
+@media screen and (max-width: 1439px) {
   .header,
   .main,
   .footer {
